<resources>
    <string name="app_name">ContactBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="welcome_to_contact_book">Welcome To Contact book</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="please_wait">Please Wait</string>
    <string name="phone_number">Phone Number</string>
    <string name="notes">Notes</string>
    <string name="add_contact">Add Contact</string>
    <string name="ab">AB</string>
    <string name="edit">Edit</string>
    <string name="get_started">Get Started</string>
    <string name="nothing_to_show">Nothing To Show</string>
    <string name="mobile">moblie</string>
    <string name="home">home</string>
    <string name="work">work</string>
    <string name="others">Others</string>


    <string-array name="contact_type">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
</resources>