<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contactProfile.ContactProfileFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@drawable/edit_text_selector"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/etPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/smile_face"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintTop_toTopOf="@+id/etName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:drawablePadding="@dimen/_20dp"
        android:enabled="false"
        android:inputType="phone"
        android:letterSpacing="0.1"
        android:text="@string/phone_number"
        android:textColor="@drawable/edit_text_selector"
        android:textSize="26sp"
        app:drawableStartCompat="@drawable/phone"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawablePadding="@dimen/_20dp"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="@drawable/edit_text_selector"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/mail"
        app:layout_constraintBottom_toTopOf="@+id/etNotes"
        app:layout_constraintEnd_toEndOf="@+id/etPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_20dp"
        android:enabled="false"
        android:text="@string/notes"
        android:textColor="@drawable/edit_text_selector"
        android:textSize="26sp"
        app:drawableStartCompat="@drawable/notes"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/edit"
        app:backgroundTint="#E700C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>